--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
   <!--end header-->
 
   <!-- menu -->
-  <div class="bg-gray-300 mt-8 h-12">
+  <div class="bg-gray-300 mt-8 h-12 md:hidden">
     <div class="w-4/5 h-full m-auto flex justify-between items-center">
       <a href="#">პოლიტიკა</a>
       <a href="#">საზოგადოება</a>
@@ -62,10 +62,10 @@
   <!-- end menu -->
 
   <!-- slider -->
-    <swiper-container class="w-4/5 m-auto mt-8 h-[760px]">
+    <swiper-container class="w-4/5 m-auto mt-8 h-[760px] md:h-[560px] md:w-[928px]">
       <swiper-slide class="relative">
         <img class="w-full h-full absolute z-0" src="../img/slide/slider.png">
-        <div class="absolute z-10 bg-white w-1/3 h-64 rounded-md bottom-10 left-20 pl-10 pt-10">
+        <div class="absolute z-10 bg-white w-1/3 h-64 rounded-md bottom-10 left-20 pl-10 pt-10 xl:w-4/5">
           <div class="flex">
             <h1 class="text-customOrange">პოლიტიკა </h1>
             <p class="ml-2">• 18.04.2022</p>
@@ -73,20 +73,91 @@
           <h1 class="font-bold mt-4">ქვემო ქართლის რეგიონში 20 მლნ ლარამდე 
             ღირებულების სამელიორაციო
             ინფრასტრუქტურული პროექტები დაიწყება</h1>
-            <div class="bg-gray-100 w-28 h-10 mt-8 rounded-md flex justify-between items-center">
-              <img src="../img/arrow/arrow_right.png" alt="">
-              <h1>1/4</h1>
-              <img src="../img/arrow/arrow_left.png" alt="">
-            </div>
+        </div>
+        <div class="bg-gray-100 absolute z-10 bottom-20 ml-10 left-20 w-28 
+        h-10 mt-8 rounded-md 
+        flex justify-between items-center md:absolute md:top-0">
+          <img  src="../img/arrow/arrow_left.png" alt="">
+          <h1>1/4</h1>
+          <img  src="../img/arrow/arrow_right.png" alt="">
         </div>
       </swiper-slide>
-      <swiper-slide><img class="w-full h-full" src="../img/slide/slider (4).png"></swiper-slide>
-      <swiper-slide><img class="w-full h-full" src="../img/slide/slider (8).png"></swiper-slide>
-      <swiper-slide><img class="w-full h-full" src="../img/slide/slider (9).png"></swiper-slide>
+      <swiper-slide class="relative">
+        <img class="w-full h-full absolute z-0" src="../img/slide/slider (4).png">
+        <div class="absolute z-10 bg-white w-1/3 h-64 rounded-md bottom-10 left-20 pl-10 pt-10 xl:w-4/5">
+          <div class="flex">
+            <h1 class="text-customOrange">პოლიტიკა </h1>
+            <p class="ml-2">• 18.04.2022</p>
+          </div>
+          <h1 class="font-bold mt-4">ქვემო ქართლის რეგიონში 20 მლნ ლარამდე 
+            ღირებულების სამელიორაციო
+            ინფრასტრუქტურული პროექტები დაიწყება</h1>
+        </div>
+        <div class="bg-gray-100 absolute z-10 bottom-20 ml-10 left-20 w-28 
+        h-10 mt-8 rounded-md 
+        flex justify-between items-center md:absolute md:top-0">
+          <img  src="../img/arrow/arrow_left.png" alt="">
+          <h1>2/4</h1>
+          <img  src="../img/arrow/arrow_right.png" alt="">
+        </div>
+      </swiper-slide>
+      <swiper-slide class="relative">
+        <img class="w-full h-full absolute z-0" src="../img/slide/slider (8).png">
+        <div class="absolute z-10 bg-white w-1/3 h-64 rounded-md bottom-10 left-20 pl-10 pt-10 xl:w-4/5">
+          <div class="flex">
+            <h1 class="text-customOrange">პოლიტიკა </h1>
+            <p class="ml-2">• 18.04.2022</p>
+          </div>
+          <h1 class="font-bold mt-4">ქვემო ქართლის რეგიონში 20 მლნ ლარამდე 
+            ღირებულების სამელიორაციო
+            ინფრასტრუქტურული პროექტები დაიწყება</h1>
+        </div>
+        <div class="bg-gray-100 absolute z-10 bottom-20 ml-10 left-20 w-28 
+        h-10 mt-8 rounded-md 
+        flex justify-between items-center md:absolute md:top-0">
+          <img  src="../img/arrow/arrow_left.png" alt="">
+          <h1>3/4</h1>
+          <img  src="../img/arrow/arrow_right.png" alt="">
+        </div>
+      </swiper-slide>
+      <swiper-slide class="relative">
+        <img class="w-full h-full absolute z-0" src="../img/slide/slider (9).png">
+        <div class="absolute z-10 bg-white w-1/3 h-64 rounded-md bottom-10 left-20 pl-10 pt-10 xl:w-4/5">
+          <div class="flex">
+            <h1 class="text-customOrange">პოლიტიკა </h1>
+            <p class="ml-2">• 18.04.2022</p>
+          </div>
+          <h1 class="font-bold mt-4">ქვემო ქართლის რეგიონში 20 მლნ ლარამდე 
+            ღირებულების სამელიორაციო
+            ინფრასტრუქტურული პროექტები დაიწყება</h1>
+        </div>
+        <div class="bg-gray-100 absolute z-10 bottom-20 ml-10 left-20 w-28 
+        h-10 mt-8 rounded-md 
+        flex justify-between items-center md:absolute md:top-0">
+          <img  src="../img/arrow/arrow_left.png" alt="">
+          <h1>4/4</h1>
+          <img  src="../img/arrow/arrow_right.png" alt="">
+        </div>
+      </swiper-slide>
     </swiper-container>
   <!-- end slider -->
 
   <!-- information -->
+  <!--size: 1024px -->
+  <div class="hidden w-[928px] h-[519px] mt-8 m-auto md:flex">
+  <div class="w-full shadow-indigo-500/40">
+    <div class="w-full">
+      <img class="w-full h-[356px]" src="../img/news/pic (2).png">
+      <h1 class="mt-4 font-bold text-sm ml-2">ჩრდილოეთ კორეამ აშშ-სა და სამხრეთ კორეის წინააღმდეგ იმიტირებული ბირთვული კონტრშეტევა დაიწყო</h1>
+      <hr class="mt-4">
+      <div class="flex justify-between mt-4">
+        <h1 class="text-customOrange font-bold ml-2">ახალი ამბები</h1>
+        <p class="ml-2">18.04.2023 </p>
+      </div>
+    </div>
+  </div>
+  </div>
+  <!--1024px-->
   <div class="w-4/5 h-[519px] m-auto mt-8 flex justify-between mb-20">
     <div class="w-80">
       <div class="h-60 bg-white drop-shadow-lg">
@@ -100,7 +171,7 @@
         <h1 class="font-bold text-sm mt-2 ml-2">საქართველოს მორაგბეთა ნაკრები „რაგბი ევროპის“ გამარჯვებულია</h1>
       </div>
     </div>
-    <div class="w-2/4 ml-6 mr-6 shadow-indigo-500/40">
+    <div class="w-2/4 ml-6 mr-6 shadow-indigo-500/40 md:hidden">
       <div class="w-full">
         <img class="w-full h-[356px]" src="../img/news/pic (2).png">
         <h1 class="mt-4 font-bold text-sm ml-2">ჩრდილოეთ კორეამ აშშ-სა და სამხრეთ კორეის წინააღმდეგ იმიტირებული ბირთვული კონტრშეტევა დაიწყო</h1>
@@ -111,7 +182,7 @@
         </div>
       </div>
     </div>
-    <div class="w-1/4">
+    <div class="w-1/4 md:w-80">
       <div class="h-60 bg-white drop-shadow-lg">
         <img class="w-full h-3/5" src="../img/news/pic (3).png">
         <p class="text-sm mt-4 ml-2">პოლიტიკა • 18.04.2023</p>
