--- a/src/index.html
+++ b/src/index.html
@@ -92,11 +92,11 @@
       <div class="w-1/3 flex justify-center">
         <img src="../img/logo.png">
       </div>
-      <div class="hidden sm:block items-center w-28  absolute left-36">
-        <div class="bg-gray-100 ml-16 flex items-center p-3 rounded-sm">
+      <div class="hidden sm:flex items-center w-28  absolute left-36">
+        <input class="search w-1/2 h-10 bg-gray-200" type="text" placeholder="ძიება...">
+        <div class="bg-gray-100 flex absolute right-0 items-center p-3 rounded-sm">
         <img class="w-6 h-6 searchimg" src="../img/icons/Search.png">
         </div>
-        <input class="search w-14 h-10 bg-gray-200" type="text" placeholder="ძიება...">
       </div>
       <div class="w-80 bg-gray-200 rounded-md h-12 flex items-center sm:hidden">
         <input class="w-full relative h-full bg-gray-200 rounded-md pl-5" type="text" placeholder="ძიება...">
