--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
   <script src="./src/index.js" defer></script>
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="./dist/output.css" rel="stylesheet">
   <title>Clip Art</title>
   <style>
     .relative:hover .absolute {
@@ -266,12 +266,13 @@
   <!--1024px-->
   <div class="w-4/5 h-[519px] m-auto mt-8 flex justify-between mb-20 sm:hidden">
     <div class="w-80">
-      <div class="h-60 bg-white drop-shadow-lg">
+      <div class="h-60 bg-white drop-shadow-lg xl:h-80">
         <img class="w-full h-3/5" src="../img/news/pic.png">
         <p class="text-sm mt-4 ml-2">პოლიტიკა • 18.04.2023</p>
-        <h1 class="font-bold text-sm mt-2 ml-2">კიმ ჩენ ინი აშშ-სა და სამხრეთ კორეას ბირთვული იარაღით ემუქრება</h1>
+        <h1 class="font-bold text-sm mt-2 ml-2">კიმ ჩენ ინი აშშ-სა და 
+        სამხრეთ კორეას ბირთვული იარაღით ემუქრება</h1>
       </div>
-      <div class="h-60 bg-white drop-shadow-lg mt-8">
+      <div class="h-60 bg-white drop-shadow-lg mt-8 xl:h-80">
         <img class="w-full h-3/5" src="../img/news/pic (1).png">
         <p class="text-sm mt-4 ml-2">პოლიტიკა • 18.04.2023</p>
         <h1 class="font-bold text-sm mt-2 ml-2">საქართველოს მორაგბეთა ნაკრები „რაგბი ევროპის“ გამარჯვებულია</h1>
@@ -288,13 +289,13 @@
         </div>
       </div>
     </div>
-    <div class="w-1/4 md:w-80">
-      <div class="h-60 bg-white drop-shadow-lg">
+    <div class="w-80 md:w-80">
+      <div class="h-60 bg-white drop-shadow-lg xl:h-80">
         <img class="w-full h-3/5" src="../img/news/pic (3).png">
         <p class="text-sm mt-4 ml-2">პოლიტიკა • 18.04.2023</p>
         <h1 class="font-bold text-sm mt-2 ml-2">დღეს კიბოს სკრინინგის მხარდასაჭერი კონცერტი გაიმართება</h1>
       </div>
-      <div class="h-60 bg-white drop-shadow-lg mt-8">
+      <div class="h-60 bg-white drop-shadow-lg mt-8 xl:h-80">
         <img class="w-full h-3/5" src="../img/news/pic (4).png">
         <p class="text-sm mt-4 ml-2">პოლიტიკა • 18.04.2023</p>
         <h1 class="font-bold text-sm mt-2 ml-2">უკრაინას დიდი კონტრშეტევისთვის მხოლოდ ერთი მცდელობა ექნება</h1>
